# pranava

./: .gitignore  NSM.md  PAPER.md  README.md  VISION.md  pyproject.toml
docs/: Audio AI and Sanskrit Epistemology-2.rtf  Audio AI and Sanskrit Epistemology.md  data.json  index.html  intro1.md  literature_urls.txt
gates/: check.py  gate_AA.json  gate_APP.json  gate_AX.json  gate_BM.json  gate_CL.json  gate_E0.json  gate_E1.json  gate_E2.json  gate_E3.json  gate_E4.json  gate_E5.json  gate_E6.json  gate_E7.json  gate_IT.json  gate_LR.json  gate_M0.json  gate_M1.json  gate_M2.json  gate_M2b.json  gate_M3.json  gate_ML.json  gate_NC.json  gate_P0.json  gate_P1.json  gate_P2.json  gate_P3.json  gate_P4.json  gate_P5.json  gate_RD.json  gate_RF.json  gate_S2.json  gate_SC.json  gate_SL.json  gate_X0.json  gate_X1.json  gate_X2.json
paper/: paper.aux  paper.out  paper.tex
research/: 00-landscape-scan.md  01-samsaadhanii-integration.md  02-prior-work-assets.md  CAMPAIGN-2026-07-18.md  E2-report.md  E5-report.md  E6-correction.md  P3-battery-findings.md  P3-sphota-lens.md  P5-1b-scale.md  P5-scale-feasibility.md  THESIS-sabdadvaita.md  alm-vs-alm.md  alm_efe_ledger.jsonl  efe_ledger.jsonl  instruction-tuning.md  multilingual.md  nsm-layer-c.md  rlaif.md  scale-1b.md  sota-leaderboard.md  sphota-lens.md
scripts/: autoresearch_step.py  build_concept_graph.py  build_edition.py  e0_harness_demo.py  e1_synthesize.py  e2_run.py  e2b_replicate.py  e3_second_text.py  e5_prosody.py  e6_scale_verbfinal.py  e7_definitive.py  m2b_segmented_morph.py  morph_analyze_kanda.py  (+1 more)
(+1309 files in other folders)
