[project]
name = "pranava"
version = "0.1.0"
description = "Śabda: a digital critical edition of Bhartṛhari's Vākyapadīya and an empirical study of speech-centred cognition in language models."
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0",
    "pydantic>=2.7",
]

[project.optional-dependencies]
speech = ["openai-whisper"]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.6", "hypothesis>=6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pranava"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "slow: long-running tests",
    "gpu: requires CUDA",
    "corpus: requires the local Vākyapadīya source JSON",
]

[tool.ruff]
line-length = 100
target-version = "py312"
